fix list layout bug, update gitignore

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -69,7 +69,7 @@ footer {
 
 .store h3 {
   padding: 0;
-  margin: 0 0 10px 0;
+  margin: 0 0 9px;
 }
 
 .store address {
